Defining controllers as classes

--- a/app/scripts/search/search.tpl.html
+++ b/app/scripts/search/search.tpl.html
@@ -1,4 +1,4 @@
-<input type="search" ng-model="query" ng-change="change({e: query})" >
+<input type="search" ng-model="query.input" ng-change="change({e: query})" >
 <a href="#" ng-click="search()"  class="searchButton">SEARCH</a>
 <span class="advanced-search-link">
 	<a href="#" ng-click="searchCtrl.advanced=!searchCtrl.advanced">Advanced Search</a>
