--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
             <div preloader ng-show="searchCtrl.preloaderActive" class="search-preloader"></div>
             
             <div ng-controller="paginationController as pagCtrl">
-              <div my-pagination items="pagCtrl.items" talk="pagCtrl.talk(e)" perpage="pagCtrl.updateItemsPerPage(e)" itemspage="pagCtrl.updateItemsPage(e)"></div>
+              <div my-pagination items="pagCtrl.items" itemsnum="pagCtrl.numberOfItems" updatedisplay="pagCtrl.updateDisplay(currentPage, perPage)"></div>
             </div>
             <div deckgrid class="deckgrid" source="searchCtrl.displayItems" cardTemplate="views/templates/deckgrid-card.html"></div>
           </div>
@@ -125,6 +125,7 @@
         <script src="scripts/common/services.js"></script>
         <script src="scripts/common/dataModel.js"></script>
         <script src="scripts/common/directives.js"></script>
+        <script src="scripts/common/displayFactory.js"></script>
         
         <!-- Dashboard controlls, adding and removing widgets from workspace -->
         <script src="scripts/controlls/services.js"></script>
