--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-controller="AppCtrl as ctrl" >
+    <div class="container"  >
       <selected-tools>
         <my-dropdown></my-dropdown>
       </selected-tools>
@@ -115,7 +115,6 @@
         <script src="scripts/app.js"></script>
         
         <script src="scripts/factories/services.js"></script>
-        <script src="scripts/controllers/main.js"></script>
         
 
         <!-- 
