Adding collections tool

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="styles/pagination.css">
     <link rel="stylesheet" href="styles/commons.css">
     <link rel="stylesheet" href="styles/ng-tiny-scrollbar.css" >
+    <link rel="stylesheet" href="styles/collections.css" >
 
     <!-- endbuild -->
 
@@ -119,7 +120,18 @@
         <script src="scripts/search/directives/search_directive.js"></script>
         <script src="scripts/search/directives/pagination_directive.js"></script>
         <script src="scripts/search/search.js"></script>
+        
+        <!--Deckgrid tool  -->
+        <script src="scripts/deckgrid/controller/deckgrid-controller.js"></script>
         <script src="scripts/deckgrid/deckgrid.js"></script>
+
+        <!-- Collections tool -->
+        <!-- <script src="scripts/collections/services/search_services.js"></script>
+        <script src="scripts/collections/controllers/pagination_controller.js"></script>
+        <script src="scripts/collections/controllers/search_controller.js"></script> -->
+        <script src="scripts/collections/controllers/collections-controller.js"></script> 
+        <script src="scripts/collections/directives/collections-directive.js"></script>
+        <script src="scripts/collections/collections.js"></script>
         
         <!-- Map tool -->
         <script src="scripts/map/map.js"></script>
