--- a/app/scripts/map/template.tpl.html
+++ b/app/scripts/map/template.tpl.html
@@ -1,4 +1,4 @@
-<div class="angular-google-map-container" ng-controller="mapController as mapCtrl">
+<div class="map-container" ng-controller="mapController as mapCtrl">
   <google-map draggable="true"  center="mapCtrl.map.center" zoom="mapCtrl.map.zoom">
     <markers models="mapCtrl.markers" coords="'self'" icon="'icon'" click="'onClicked'" >
     </markers> 
