Refactoring dialogs and notifications into directives

--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,7 @@
         <script src="scripts/common/controllers/modal_controller.js"></script>        
         <script src="scripts/common/directives/modal_directive.js"></script>        
         <script src="scripts/common/directives/preloader_directive.js"></script>        
+        <script src="scripts/common/directives/dialog_directive.js"></script>        
         <script src="scripts/common/common.js"></script>        
 
         
