--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/ng-tiny-scrollbar.css" >
     <link rel="stylesheet" href="styles/collections.css" >
     <link rel="stylesheet" href="styles/statistics.css" >
+    <link rel="stylesheet" href="styles/facets.css" >
 
     <!-- endbuild -->
 
@@ -119,7 +120,9 @@
         <!-- Search tool -->
         <script src="scripts/search/controllers/pagination_controller.js"></script>
         <script src="scripts/search/controllers/search_controller.js"></script>
+        <script src="scripts/search/controllers/facets-controller.js"></script>
         <script src="scripts/search/directives/search_directive.js"></script>
+        <script src="scripts/search/directives/facets-directive.js"></script>
         <script src="scripts/search/directives/pagination_directive.js"></script>
         <script src="scripts/search/search.js"></script>
         
