Adding annotation module

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="styles/collections.css" >
     <link rel="stylesheet" href="styles/statistics.css" >
     <link rel="stylesheet" href="styles/facets.css" >
+    <link rel="stylesheet" href="styles/annotations.css" >
 
     <!-- endbuild -->
 
@@ -144,11 +145,19 @@
         <script src="scripts/statistics/controllers/statistics-controller.js"></script> 
         <script src="scripts/statistics/directives/statistics-directive.js"></script>
         <script src="scripts/statistics/controllers/barchart-controller.js"></script>
-
         <script src="scripts/statistics/directives/barchart-directive.js"></script>
-
         <script src="scripts/statistics/statistics.js"></script>
         
+        <!-- Annotations tool -->
+        <script src="scripts/annotations/controllers/crop-controller.js"></script>
+        <script src="scripts/annotations/directives/crop-directive.js"></script>
+        <script src="scripts/annotations/services/annotations-service.js"></script>
+        <script src="scripts/annotations/controllers/annotations-controller.js"></script>
+
+        <script src="scripts/annotations/directives/annotations-directive.js"></script>
+        <script src="scripts/annotations/directives/listannotations-directive.js"></script>
+        <script src="scripts/annotations/annotations.js"></script>
+
 
 
         <!-- Map tool -->
