Adding visualization module

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="styles/statistics.css" >
     <link rel="stylesheet" href="styles/facets.css" >
     <link rel="stylesheet" href="styles/annotations.css" >
+    <link rel="stylesheet" href="styles/visualizations.css" >
 
     <!-- endbuild -->
 
@@ -158,6 +159,9 @@
         <script src="scripts/annotations/annotations.js"></script>
 
 
+        <!-- Vis tool -->
+        <script src="scripts/visualizations/visualizations.js"></script>
+        <script src="scripts/visualizations/directives/time-bar.js"></script>
 
         <!-- Map tool -->
         <script src="scripts/map/map.js"></script>
