--- a/app/scripts/visualizations/template.tpl.html
+++ b/app/scripts/visualizations/template.tpl.html
@@ -12,14 +12,14 @@
 
   <div class="data-source">
     <span>Data source: </span>
-    <span ng-class="(visCtrl.resActive) ? 'choice' : 'choice active'" ng-click="visCtrl.resActive=false" >whole repository</span>
-    <span ng-class="(visCtrl.resActive) ? 'choice active' : 'choice'" ng-click="visCtrl.resActive=true">search results</span>
+    <span ng-class="(visCtrl.resultsActive) ? 'choice' : 'choice active'" ng-click="visCtrl.resultsActive=false" >whole repository</span>
+    <span ng-class="(visCtrl.resultsActive) ? 'choice active' : 'choice'" ng-click="visCtrl.resultsActive=true">search results</span>
   </div>
 
   <div class="vis">
     <p ng-show="visCtrl.visList[0].visible">First</p>
     <p ng-show="visCtrl.visList[1].visible">Second</p>
     <p ng-show="visCtrl.visList[2].visible">Third</p>
-    <time-bar></time-bar>
+    <time-bar datasrc="visCtrl.resultsActive" bartitle="Data upload over time"></time-bar>
   </div>
 </div>
