Adding search history

--- a/app/index.html
+++ b/app/index.html
@@ -130,7 +130,8 @@
         <script src="scripts/search/directives/facets-directive.js"></script>
         <script src="scripts/search/directives/pagination_directive.js"></script>
         <script src="scripts/search/search.js"></script>
-        
+        <script src="scripts/search/directives/search-history.js"></script>
+
         <!--Deckgrid tool  -->
         <script src="scripts/deckgrid/controller/deckgrid-controller.js"></script>
         <script src="scripts/deckgrid/deckgrid.js"></script>
