Show search history after first search is done

--- a/app/scripts/visualizations/template.tpl.html
+++ b/app/scripts/visualizations/template.tpl.html
@@ -17,9 +17,8 @@
   </div>
 
   <div class="vis">
-    <p ng-show="visCtrl.visList[0].visible">First</p>
     <p ng-show="visCtrl.visList[1].visible">Second</p>
     <p ng-show="visCtrl.visList[2].visible">Third</p>
-    <time-bar datasrc="visCtrl.resultsActive" bartitle="Data upload over time"></time-bar>
+    <time-bar datasrc="visCtrl.resultsActive" ng-show="visCtrl.visList[0].visible" bartitle="Data upload over time"></time-bar>
   </div>
 </div>
