--- a/app/index.html
+++ b/app/index.html
@@ -137,11 +137,10 @@
         <script src="scripts/deckgrid/deckgrid.js"></script>
 
         <!-- Collections tool -->
-        <script src="scripts/collections/services/collections-service.js"></script> 
-        <script src="scripts/collections/controllers/collections-controller.js"></script> 
-        <script src="scripts/collections/directives/collections-directive.js"></script>
-        <script src="scripts/collections/collections.js"></script>
-        
+        <script src="scripts/collections/collections.module.js"></script>
+        <script src="scripts/collections/collections.service.js"></script>
+        <script src="scripts/collections/collections.directive.js"></script>
+
 
         <!-- Statistics tool -->
         <script src="scripts/statistics/controllers/statistics-controller.js"></script> 
