--- a/app/index.html
+++ b/app/index.html
@@ -96,16 +96,15 @@
         <!-- 
         Common services
         -->
-        <script src="scripts/common/services/commonService.js"></script>        
-        <script src="scripts/common/services/requestFactory.js"></script>        
-        <script src="scripts/common/services/displayFactory.js"></script>        
-        <script src="scripts/common/services/dataModel.js"></script>        
-        <script src="scripts/common/services/search-service.js"></script>        
-        <script src="scripts/common/controllers/modal_controller.js"></script>        
-        <script src="scripts/common/directives/modal_directive.js"></script>        
-        <script src="scripts/common/directives/preloader_directive.js"></script>        
-        <script src="scripts/common/directives/dialog_directive.js"></script>        
-        <script src="scripts/common/common.js"></script>        
+        <script src="scripts/common/common.js"></script>
+        <script src="scripts/common/services/common.services.js"></script>
+        <script src="scripts/common/services/request.factory.js"></script>
+        <script src="scripts/common/services/display.factory.js"></script>
+        <script src="scripts/common/services/data.model.js"></script>
+        <script src="scripts/common/services/search.service.js"></script>
+        <script src="scripts/common/directives/modal.directive.js"></script>
+        <script src="scripts/common/directives/preloader.directive.js"></script>
+        <script src="scripts/common/directives/dialog.directive.js"></script>
 
         <!-- d3 module-->
         <script src="scripts/d3/d3.js"></script>
