--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
         <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/lodash/dist/lodash.compat.js"></script>
         <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
-        <script src="bower_components/ng-tiny-scrollbar/dist/ng-tiny-scrollbar.js"></script>
+        <script src="bower_components/ng-tiny-scrollbar/dist/ng-tiny-scrollbar.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
