--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,6 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/ng-tiny-scrollbar/dist/ng-tiny-scrollbar.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -83,7 +82,6 @@
         <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/lodash/dist/lodash.compat.js"></script>
         <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
-        <script src="bower_components/ng-tiny-scrollbar/dist/ng-tiny-scrollbar.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -105,8 +103,10 @@
         <script src="scripts/common/directives/modal.directive.js"></script>
         <script src="scripts/common/directives/preloader.directive.js"></script>
         <script src="scripts/common/directives/dialog.directive.js"></script>
+        <script src="scripts/common/directives/scrollbar.directive.js"></script>
 
-        <!-- d3 module-->
+
+    <!-- d3 module-->
         <script src="scripts/d3/d3.js"></script>
 
         
