Refactoring deckgrind module

--- a/app/index.html
+++ b/app/index.html
@@ -130,8 +130,9 @@
         <script src="scripts/search/directives/search-history.js"></script>
 
         <!--Deckgrid tool  -->
-        <script src="scripts/deckgrid/controller/deckgrid-controller.js"></script>
-        <script src="scripts/deckgrid/deckgrid.js"></script>
+        <script src="scripts/deckgrid/deckgrid.module.js"></script>
+        <script src="scripts/deckgrid/deckgrid.controller.js"></script>
+        <script src="scripts/deckgrid/deckgrid.directive.js"></script>
 
         <!-- Collections tool -->
         <script src="scripts/collections/collections.module.js"></script>
