Refactoring map module

--- a/app/index.html
+++ b/app/index.html
@@ -158,8 +158,9 @@
         <script src="scripts/visualizations/directives/time-bar.js"></script>
 
         <!-- Map tool -->
+        <script src="scripts/map/map.module.js"></script>
         <script src="scripts/map/map.js"></script>
-        
+
         
 
         <!-- endbuild -->
