Refactoring search module

--- a/app/index.html
+++ b/app/index.html
@@ -120,14 +120,12 @@
         
         <!--  -->
         <!-- Search tool -->
-        <script src="scripts/search/controllers/pagination_controller.js"></script>
-        <script src="scripts/search/controllers/search_controller.js"></script>
-        <script src="scripts/search/controllers/facets-controller.js"></script>
-        <script src="scripts/search/directives/search_directive.js"></script>
-        <script src="scripts/search/directives/facets-directive.js"></script>
-        <script src="scripts/search/directives/pagination_directive.js"></script>
-        <script src="scripts/search/search.js"></script>
-        <script src="scripts/search/directives/search-history.js"></script>
+        <script src="scripts/search/search.module.js"></script>
+        <script src="scripts/search/search.directive.js"></script>
+        <script src="scripts/search/facets.directive.js"></script>
+        <script src="scripts/search/pagination.directive.js"></script>
+        <script src="scripts/search/search.history.service.js"></script>
+        <script src="scripts/search/search.history.js"></script>
 
         <!--Deckgrid tool  -->
         <script src="scripts/deckgrid/deckgrid.module.js"></script>
