Refactoring statistics module

--- a/app/index.html
+++ b/app/index.html
@@ -139,10 +139,9 @@
 
 
         <!-- Statistics tool -->
-        <script src="scripts/statistics/controllers/statistics-controller.js"></script> 
-        <script src="scripts/statistics/directives/statistics-directive.js"></script>
-        <script src="scripts/statistics/statistics.js"></script>
-        
+        <script src="scripts/statistics/statistics.module.js"></script>
+        <script src="scripts/statistics/statistics.directive.js"></script>
+
         <!-- Annotations tool -->
         <script src="scripts/annotations/annotations.module.js"></script>
         <script src="scripts/annotations/crop.directive.js"></script>
