Refactoring visualization module

--- a/app/index.html
+++ b/app/index.html
@@ -151,8 +151,10 @@
 
 
         <!-- Vis tool -->
-        <script src="scripts/visualizations/visualizations.js"></script>
-        <script src="scripts/visualizations/directives/time-bar.js"></script>
+        <script src="scripts/visualizations/visualization.module.js"></script>
+        <script src="scripts/visualizations/visualization.service.js"></script>
+        <script src="scripts/visualizations/visualization.controller.js"></script>
+        <script src="scripts/visualizations/time.bar.directive.js"></script>
 
         <!-- Map tool -->
         <script src="scripts/map/map.module.js"></script>
