--- a/app/scripts/visualizations/template.tpl.html
+++ b/app/scripts/visualizations/template.tpl.html
@@ -19,6 +19,6 @@
   <div class="vis">
     <p ng-show="visCtrl.visList[1].visible">Second</p>
     <p ng-show="visCtrl.visList[2].visible">Third</p>
-    <time-bar datasrc="visCtrl.resultsActive" ng-show="visCtrl.visList[0].visible" bartitle="Data upload over time"></time-bar>
+    <starc-time-bar datasrc="visCtrl.resultsActive" ng-show="visCtrl.visList[0].visible" bartitle="Data upload over time"></starc-time-bar>
   </div>
 </div>
