Refactoring map controller

--- a/app/index.html
+++ b/app/index.html
@@ -158,6 +158,7 @@
 
         <!-- Map tool -->
         <script src="scripts/map/map.module.js"></script>
+        <script src="scripts/map/map.service.js"></script>
         <script src="scripts/map/map.js"></script>
 
         
