Refactoring search controllers

--- a/app/index.html
+++ b/app/index.html
@@ -122,6 +122,7 @@
         <!-- Search tool -->
         <script src="scripts/search/search.module.js"></script>
         <script src="scripts/search/search.directive.js"></script>
+        <script src="scripts/search/facets.service.js"></script>
         <script src="scripts/search/facets.directive.js"></script>
         <script src="scripts/search/pagination.directive.js"></script>
         <script src="scripts/search/search.history.service.js"></script>
