Building story module

--- a/app/index.html
+++ b/app/index.html
@@ -166,6 +166,7 @@
       <!-- Stories tool -->
     <script src="scripts/stories/stories.module.js"></script>
     <script src="scripts/stories/stories.block.directive.js"></script>
+    <script src="scripts/stories/stories.tabs.directive.js"></script>
     <script src="scripts/stories/stories.directive.js"></script>
 
 
