Adding story creation module

--- a/app/index.html
+++ b/app/index.html
@@ -107,10 +107,11 @@
     <script src="scripts/common/directives/scrollbar.directive.js"></script>
 
 
-<!-- d3 module-->
+    <!-- d3 module-->
     <script src="scripts/d3/d3.js"></script>
 
-
+    <!-- Drag and drop module-->
+    <script src="scripts/dragdrop/dragdrop.module.js"></script>
     <!-- Dashboard controlls, adding and removing widgets from workspace -->
 
     <script src="scripts/controlls/controlls.module.js"></script>
@@ -165,9 +166,13 @@
 
       <!-- Stories tool -->
     <script src="scripts/stories/stories.module.js"></script>
+    <script src="scripts/stories/stories.data.model.js"></script>
+    <script src="scripts/stories/stories.service.js"></script>
     <script src="scripts/stories/stories.block.directive.js"></script>
     <script src="scripts/stories/stories.tabs.directive.js"></script>
     <script src="scripts/stories/stories.directive.js"></script>
+    <script src="scripts/stories/stories.preview.block.directive.js"></script>
+    <script src="scripts/stories/stories.preview.directive.js"></script>
 
 
 
